--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import 'assets/fonts/v5.scss';
+@import 'assets/fonts/hyfont.scss';
 @import './Components/Counter.scss';
 
 $fontStack:    Helvetica, sans-serif;
