--- a/build_config/gulp_task/font/tpl.styl
+++ b/build_config/gulp_task/font/tpl.styl
@@ -38,7 +38,7 @@
 	&:before
 		@extend .icon:before
 
-[class^="<%= className %>-"]:before
+[class*="<%= className %>-"]:before
 	font-family "<%= fontName %>"
 
 
