--- a/build_config/gulp_task/font/tpl.scss
+++ b/build_config/gulp_task/font/tpl.scss
@@ -42,7 +42,7 @@
 	font-family: "<%= fontName %>";
 }
 
-[class^="<%= className %>-"]:before {
+[class*="<%= className %>-"]:before {
 	font-family: "<%= fontName %>";
 }
 
