完善iconfont, 增加扩展样式

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import 'assets/fonts/hyfont.scss';
+@import 'assets/fonts/icon.scss';
 @import './Components/Counter.scss';
 
 $fontStack:    Helvetica, sans-serif;
