--- a/build_config/gulp_task/font/tpl.css
+++ b/build_config/gulp_task/font/tpl.css
@@ -1,35 +1,3 @@
-.icon,
-.<%= className %> {
-	display: inline-block;
-	font-size: inherit;
-	font-weight: normal;
-	font-style: normal;
-	text-rendering: auto;
-	text-transform: translate(0, 0);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-.icon::before,
-.<%= className %>::before {
-	width: 1.0714em;
-	vertical-align: -4%;
-	speak: none;
-	text-align: center;
-	font-variant: normal;
-	line-height: 1em;
-}
-.<%= className %>-bg { 
-	/* 透明字 使用覆盖图片 */
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	border-radius: 10em;
-	color: transparent !important;
-}
-.<%= className %>-bg::before {
-	color: transparent !important;
-}
-
 @font-face {
 	font-family: "<%= fontName %>";
 	src: url("<%= fontRefer %>/<%= fontName %>.eot");
@@ -40,12 +8,43 @@
 		url("<%= fontRefer %>/<%= fontName %>.svg#<%= fontName %>") format("svg");
 }
 
-.<%= className %> {
+[class^="<%= className %>-"],
+[class*=" <%= className %>-"] {
 	font-family: "<%= fontName %>";
+	display: inline-block;
+	width: auto;
+	height: auto;
+	font-size: inherit;
+	font-weight: normal;
+	font-style: normal;
+	line-height: normal;
+    text-decoration: inherit;
+	text-rendering: auto;
+	vertical-align: baseline;
+	background-image: none;
+	background-position: 0 0;
+	background-repeat: repeat;
+	margin-top: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+[class^="<%= className %>-"]::before,
+[class*=" <%= className %>-"]::before {
+	text-decoration: inherit;
+	display: inline-block;
+	speak: none;
 }
 
-[class*="<%= className %>-"]::before {
-	font-family: "<%= fontName %>";
+.<%= className %>-font-bg { 
+	/* 透明字 使用覆盖图片 */
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-radius: 10em;
+	color: transparent !important;
+}
+.<%= className %>-font-bg::before {
+	color: transparent !important;
 }
 
 <% _.each(glyphs, function(glyph) { %>
