--- a/build_config/gulp_task/font/tpl.scss
+++ b/build_config/gulp_task/font/tpl.scss
@@ -1,32 +1,3 @@
-.icon {
-	display: inline-block;
-	font-size: inherit;
-	font-weight: normal;
-	font-style: normal;
-	text-rendering: auto;
-	text-transform: translate(0, 0);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	&:before {
-		width: 1.0714em;
-		vertical-align: -4%;
-		speak: none;
-		text-align: center;
-		font-variant: normal;
-		line-height: 1em;
-	}
-}
-.<%= className %>-bg {// 透明字 使用覆盖图片
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
-	border-radius: 10em;
-	color: transparent !important;
-	&:before {
-		color: transparent !important;
-	}
-}
-
 @font-face {
 	font-family: "<%= fontName %>";
 	src: url("<%= fontRefer %>/<%= fontName %>.eot");
@@ -37,15 +8,114 @@
 		url("<%= fontRefer %>/<%= fontName %>.svg#<%= fontName %>") format("svg");
 }
 
-.<%= className %> {
-	@extend .icon;
+[class^="<%= className %>-"],
+[class*=" <%= className %>-"] {
 	font-family: "<%= fontName %>";
+	display: inline;
+	width: auto;
+	height: auto;
+	font-size: inherit;
+	font-weight: normal;
+	font-style: normal;
+	line-height: normal;
+    text-decoration: inherit;
+	text-rendering: auto;
+	// text-transform: translate(0, 0);
+	vertical-align: baseline;
+	background-image: none;
+	background-position: 0 0;
+	background-repeat: repeat;
+	margin-top: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	&:before {
+		// width: 1.0714em;
+		// vertical-align: -4%;
+		// speak: none;
+		// text-align: center;
+		// font-variant: normal;
+		// line-height: 1em;
+		text-decoration: inherit;
+		display: inline-block;
+		speak: none;
+	}
+}
+.<%= className %>-font-bg {// 透明字 使用覆盖图片
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	border-radius: 10em;
+	color: transparent !important;
+	&:before {
+		color: transparent !important;
+	}
 }
 
-[class*="<%= className %>-"]:before {
-	font-family: "<%= fontName %>";
+
+// 扩展图标样式
+@keyframes spin{
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(359deg);
+	}
 }
 
+[class^="<%= className %>-"],
+[class*=" <%= className %>-"] {
+	&.icon-spin {
+		display: inline-block;
+		animation: spin 2s infinite linear;
+	}
+	&.pull-left {
+		margin-right: .3em;
+	}
+	&.pull-right {
+		margin-left: .3em;
+	}
+}
+.pull-left {
+	float: left;
+}
+.pull-right {
+	float: right;
+}
+.icon-large {
+	&:before {
+		vertical-align: -10%;
+		font-size: 1.3333333333333333em;
+	}
+}
+.icon-2x {
+	font-size: 2em;
+}
+.icon-3x {
+	font-size: 3em;
+}
+.icon-4x {
+	font-size: 4em;
+}
+.icon-border {
+	border: solid 1px #eee;
+	padding: .2em .25em .15em;
+	border-radius: 3px;
+	&.icon-4x {
+		border-width: 4px;
+		border-radius: 6px;
+	}
+	&.icon-3x {
+		border-width: 3px;
+		border-radius: 5px;
+	}
+	&.icon-2x {
+		border-width: 2px;
+		border-radius: 4px;
+	}
+}
+.icon-muted {
+	color: #eee;
+}
 
 // IconFonts
 $iconfonts: (<% _.each(glyphs, function(glyph) { %>
