--- a/build_config/gulp_task/font/tpl.styl
+++ b/build_config/gulp_task/font/tpl.styl
@@ -1,28 +1,3 @@
-.icon
-	display inline-block
-	font-size inherit
-	font-weight normal
-	font-style normal
-	text-rendering auto
-	text-transform translate(0, 0)
-	-webkit-font-smoothing antialiased
-	-moz-osx-font-smoothing grayscale
-	&:before
-		width 1.0714em
-		vertical-align -4%
-		speak none
-		text-align center
-		font-variant normal
-		line-height 1em
-/.<%= className %>-bg // 透明字 使用覆盖图片
-	background-size cover
-	background-position center
-	background-repeat no-repeat
-	border-radius 10em
-	color transparent !important
-	&:before
-		color transparent !important
-
 @font-face 
 	font-family "<%= fontName %>"
 	src url("<%= fontRefer %>/<%= fontName %>.eot")
@@ -32,15 +7,45 @@
 		url("<%= fontRefer %>/<%= fontName %>.ttf") format("truetype"),
 		url("<%= fontRefer %>/<%= fontName %>.svg#<%= fontName %>") format("svg")
 
-.<%= className %>
-	@extend .icon
-	font-family "<%= fontName %>"
+[class^="<%= className %>-"],
+[class*=" <%= className %>-"]
+	font-family: "<%= fontName %>";
+	display: inline-block;
+	width: auto;
+	height: auto;
+	font-size: inherit;
+	font-weight: normal;
+	font-style: normal;
+	line-height: normal;
+    text-decoration: inherit;
+	text-rendering: auto;
+	// text-transform: translate(0, 0);
+	vertical-align: baseline;
+	background-image: none;
+	background-position: 0 0;
+	background-repeat: repeat;
+	margin-top: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 	&:before
-		@extend .icon:before
+		// width: 1.0714em;
+		// vertical-align: -4%;
+		// speak: none;
+		// text-align: center;
+		// font-variant: normal;
+		// line-height: 1em;
+		text-decoration: inherit;
+		display: inline-block;
+		speak: none;
 
-[class*="<%= className %>-"]:before
-	font-family "<%= fontName %>"
-
+/.<%= className %>-font-bg // 透明字 使用覆盖图片
+	background-size cover
+	background-position center
+	background-repeat no-repeat
+	border-radius 10em
+	color transparent !important
+	&:before
+		color transparent !important
 
 // IconFonts
 iconfonts = {<% _.each(glyphs, function(glyph) { %>
