--- a/build_config/gulp_task/font/tpl.styl
+++ b/build_config/gulp_task/font/tpl.styl
@@ -47,6 +47,71 @@
 	&:before
 		color transparent !important
 
+// 扩展图标样式
+@keyframes spin{
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(359deg);
+	}
+}
+
+[class^="<%= className %>-"],
+[class*=" <%= className %>-"] {
+	&.icon-spin {
+		display: inline-block;
+		animation: spin 2s infinite linear;
+	}
+	&.pull-left {
+		margin-right: .3em;
+	}
+	&.pull-right {
+		margin-left: .3em;
+	}
+}
+.pull-left {
+	float: left;
+}
+.pull-right {
+	float: right;
+}
+.icon-large {
+	&:before {
+		vertical-align: -10%;
+		font-size: 1.3333333333333333em;
+	}
+}
+.icon-2x {
+	font-size: 2em;
+}
+.icon-3x {
+	font-size: 3em;
+}
+.icon-4x {
+	font-size: 4em;
+}
+.icon-border {
+	border: solid 1px #eee;
+	padding: .2em .25em .15em;
+	border-radius: 3px;
+	&.icon-4x {
+		border-width: 4px;
+		border-radius: 6px;
+	}
+	&.icon-3x {
+		border-width: 3px;
+		border-radius: 5px;
+	}
+	&.icon-2x {
+		border-width: 2px;
+		border-radius: 4px;
+	}
+}
+.icon-muted {
+	color: #eee;
+}
+
 // IconFonts
 iconfonts = {<% _.each(glyphs, function(glyph) { %>
 	<%= glyph.name %>: "\<%= glyph.unicode['0'].charCodeAt(0).toString(16).toUpperCase() %>",<% }); %>
