--- a/build_config/gulp_task/font/tpl.scss
+++ b/build_config/gulp_task/font/tpl.scss
@@ -1,19 +1,21 @@
+$path : '<%= fontRefer %>/';
 @font-face {
 	font-family: "<%= fontName %>";
-	src: url("<%= fontRefer %>/<%= fontName %>.eot");
-	src: url("<%= fontRefer %>/<%= fontName %>.eot?#iefix") format("embedded-opentype"),
-		url("<%= fontRefer %>/<%= fontName %>.woff2") format("woff2"),
-		url("<%= fontRefer %>/<%= fontName %>.woff") format("woff"),
-		url("<%= fontRefer %>/<%= fontName %>.ttf") format("truetype"),
-		url("<%= fontRefer %>/<%= fontName %>.svg#<%= fontName %>") format("svg");
+	src: url($path+"<%= fontName %>.eot");
+	src: url($path+"<%= fontName %>.eot?#iefix") format("embedded-opentype"),
+		url($path+"<%= fontName %>.woff2") format("woff2"),
+		url($path+"<%= fontName %>.woff") format("woff"),
+		url($path+"<%= fontName %>.ttf") format("truetype"),
+		url($path+"<%= fontName %>.svg#<%= fontName %>") format("svg");
 }
 
 [class^="<%= className %>-"],
 [class*=" <%= className %>-"] {
 	font-family: "<%= fontName %>";
-	display: inline;
+	display: inline-block;
 	width: auto;
 	height: auto;
+	margin-top: 0;
 	font-size: inherit;
 	font-weight: normal;
 	font-style: normal;
@@ -25,7 +27,6 @@
 	background-image: none;
 	background-position: 0 0;
 	background-repeat: repeat;
-	margin-top: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	&:before {
@@ -65,20 +66,25 @@
 [class^="<%= className %>-"],
 [class*=" <%= className %>-"] {
 	&.icon-spin {
-		display: inline-block;
 		animation: spin 2s infinite linear;
 	}
-	&.pull-left {
+	&.icon-pulse {
+		animation: spin 1s infinite steps(8);
+	}
+	&.icon-pulse-4 {
+		animation: spin 1s infinite steps(4);
+	}
+	&.icon-pull-left {
 		margin-right: .3em;
 	}
-	&.pull-right {
+	&.icon-pull-right {
 		margin-left: .3em;
 	}
 }
-.pull-left {
+.icon-pull-left {
 	float: left;
 }
-.pull-right {
+.icon-pull-right {
 	float: right;
 }
 .icon-large {
