--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,4 +1,4 @@
-@import '~antd/dist/antd.css';
+/* @import '~antd/dist/antd.css'; */
 html, body {
   width: 100%;
   height: 100%auto;
@@ -18,6 +18,10 @@ html, body {
   margin-top: 10px
 }
 
+/* #newItem {
+  width: 85%;
+} */
+
 .addtodoitem button{
-  margin:10 15 0 0;
+  margin: 0 0 0 5px;
 }
